Fixed x-overflow

--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -57,33 +57,36 @@
   &__item {
     display: grid;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    max-width: 300px;
+
+    @include on-desktop {
+      max-width: 500px;
+    }
   }
 
   &__features {
     display: flex;
     flex-direction: column;
-    align-items: center;
   }
 
   &__item-photo {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     gap: 24px;
     width: 100%;
-
-    @include on-tablet {
-      justify-content: space-between;
-    }
 
     img {
       max-width: 200px;
       min-height: 100px;
 
       @include on-tablet {
-        max-width:  max-content;
+        max-width: 300px;
+      }
+
+      @include on-desktop {
+        max-width: max-content;
       }
 
       &:first-child {
@@ -92,9 +95,13 @@
     }
   }
 
-  &__description {
-    max-width: 1000px;
+  &__paragraph {
     font-size: 23px;
+  }
+
+  &__description {
+    width: 400px;
+    max-width: 1000px;
   }
 
   &__text {
