--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -3,6 +3,7 @@
   font-weight: 500;
   color: #fff;
   scroll-behavior: smooth;
+  min-width: 300px;
 
   &:has(.page__menu:target) {
     overflow: hidden;
